--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/bundle/ctrlp"]
 	path = vim/bundle/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim
+[submodule "vim/bundle/schlepp"]
+	path = vim/bundle/schlepp
+	url = https://github.com/zirrostig/vim-schlepp
