--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "home/.config/nvim/bundle/tern_for_vim"]
 	path = home/.config/nvim/bundle/tern_for_vim
 	url = https://github.com/ternjs/tern_for_vim
+[submodule "home/.fonts/powerline"]
+	path = home/.fonts/powerline
+	url = https://github.com/powerline/fonts
