--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 [submodule "home/.fonts/powerline"]
 	path = home/.fonts/powerline
 	url = https://github.com/powerline/fonts
+[submodule "home/.config/nvim/bundle/vim-javascript"]
+	path = home/.config/nvim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript
