--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "home/.config/nvim/bundle/airline-themes"]
 	path = home/.config/nvim/bundle/airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes
-[submodule "home/.config/nvim/bundle/ctrlp"]
-	path = home/.config/nvim/bundle/ctrlp
-	url = https://github.com/ctrlpvim/ctrlp.vim
 [submodule "home/.config/nvim/bundle/schlepp"]
 	path = home/.config/nvim/bundle/schlepp
 	url = https://github.com/zirrostig/vim-schlepp
@@ -47,3 +44,11 @@
 [submodule "home/.config/nvim/bundle/vim-javascript"]
 	path = home/.config/nvim/bundle/vim-javascript
 	url = https://github.com/pangloss/vim-javascript
+[submodule "home/.config/nvim/bundle/FuzzyFinder"]
+	path = home/.config/nvim/bundle/FuzzyFinder
+	url = https://github.com/vim-scripts/FuzzyFinder
+    ignore = dirty
+[submodule "home/.config/nvim/bundle/L9"]
+	path = home/.config/nvim/bundle/L9
+	url = https://github.com/vim-scripts/L9
+    ignore = dirty
