--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -15,10 +15,10 @@ bind l select-pane -R
 bind j select-pane -D
 bind k select-pane -U
 
-bind M-h resize-pane -L 20
-bind M-l resize-pane -R 20
-bind M-j resize-pane -D 20
-bind M-k resize-pane -U 20
+bind H resize-pane -L 15
+bind L resize-pane -R 15
+bind J resize-pane -D 5
+bind K resize-pane -U 5
 
 set -g pane-border-fg colour247
 set -g pane-active-border-fg colour247
