--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -26,3 +26,5 @@ set -g status-bg colour239
 set -g status-fg colour255
 
 set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
