--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "home/.config/nvim/bundle/deoplete-ternjs"]
 	path = home/.config/nvim/bundle/deoplete-ternjs
 	url = https://github.com/carlitux/deoplete-ternjs
+[submodule "home/.config/nvim/bundle/vim-jsx"]
+	path = home/.config/nvim/bundle/vim-jsx
+	url = https://github.com/mxw/vim-jsx
