--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "home/.config/nvim/bundle/vim-scala"]
 	path = home/.config/nvim/bundle/vim-scala
 	url = https://github.com/derekwyatt/vim-scala
+[submodule "home/.config/nvim/bundle/vim-go"]
+	path = home/.config/nvim/bundle/vim-go
+	url = https://github.com/fatih/vim-go
