Use tpm (tmux plugin manager) and tmux-yank plugin for system clipboard

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -28,3 +28,8 @@ set -g status-fg colour242
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize tmux plugin manager
+run '~/.tmux/plugins/tpm/tpm'
