--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,10 @@
 set -g prefix C-a
 set -s escape-time 0
 
-set-option -g default-command "exec /usr/local/bin/zsh -l"
+set -g default-terminal "tmux-256color"
+set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set -ga terminal-overrides ",*256col*:Tc"
 
 bind | split-window -h
 bind - split-window -v
