--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "home/.config/nvim/bundle/deoplete-go"]
 	path = home/.config/nvim/bundle/deoplete-go
 	url = https://github.com/zchee/deoplete-go
+[submodule "home/.config/nvim/bundle/typescript-vim"]
+	path = home/.config/nvim/bundle/typescript-vim
+	url = https://github.com/leafgarland/typescript-vim
