Start tracking .tmux dir

--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,9 @@
 [submodule "nvim/.config/nvim/bundle/editorconfig-vim"]
 	path = nvim/.config/nvim/bundle/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "tmux/.tmux/plugins/tmux-yank"]
+	path = tmux/.tmux/plugins/tmux-yank
+	url = https://github.com/tmux-plugins/tmux-yank
+[submodule "tmux/.tmux/plugins/tpm"]
+	path = tmux/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
