--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 [push]
 	default = current
 [alias]
-	lds = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
+	lds = "!git --no-pager log --pretty=format:'%h %ad %s [%cn]' --decorate --date=short"
 [filter "lfs"]
 	clean = git lfs clean %f
 	smudge = git lfs smudge %f
