--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set -s escape-time 0
 
 set -g default-terminal "tmux-256color"
 set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set -ga terminal-overrides ",*256col*:Tc"
 
 bind | split-window -h
