--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,8 +29,8 @@ set -g status-bg colour233
 set -g status-fg colour242
 
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 
