--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 set -g prefix C-a
 set -s escape-time 0
+set -g history-limit 100000
 
 set -g default-terminal "tmux-256color"
 set -g default-shell $SHELL 
