--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,3 +15,5 @@
 	excludesfile = /Users/trey/.gitignore
 [url "git@bitbucket.org:"]
 	insteadOf = https://bitbucket.org/
+[credential]
+	helper = store
