Add .projectile to .gitignore, clean up unused entries

--- a/git/.gitignore
+++ b/git/.gitignore
@@ -1,10 +1,5 @@
 .DS_Store
 .agignore
-.ensime
-ensime.sbt
-.ensime_cache/
-.sbt-hydra-history
 .idea
-application.conf
-logback.xml
 flycheck_*
+.projectile
